objects/Indicateur__c.object
<CustomObject>
    <fields>
        <fullName>Compte__c</fullName>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Indicateurs</relationshipLabel>
        <relationshipName>Indicateurs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Exercice__c</fullName>
        <label>Exercice</label>
        <picklist>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indicateur__c</fullName>
        <label>Indicateur</label>
        <picklist>
            <picklistValues>
                <fullName>ANCIENNB</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ANCIENRCJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCIENRCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCIENREJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCIENRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCIENRMJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCIENRMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTGEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STAGCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STAGESCSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STAGMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAXEPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAXEVERS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Libelle__c</fullName>
        <label>libellé</label>
        <picklist>
            <controllingField>Indicateur__c</controllingField>
            <picklistValues>
                <fullName>Mission Mastère Spécialisé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nombre d&apos;Anciens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promesse Taxe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recrutement ESC Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recrutement ESC Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recrutement Mastère Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recrutement Mastère Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recrutement MBA Diplômé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recrutement MBA Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stages ESC Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Versement Taxe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UO__c</fullName>
        <label>UO</label>
        <picklist>
            <controllingField>Libelle__c</controllingField>
            <picklistValues>
                <fullName>NB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valeur__c</fullName>
        <label>Valeur</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Indicateur</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Numéro Indicateur</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicateurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>